доделал планшетную версию адаптива

--- a/app/components/discover.html
+++ b/app/components/discover.html
@@ -74,5 +74,5 @@
       </div>
     </div>
   </div>
-  <img src="../images/NFT-highlight.webp" alt="" />
+  <div class="discover-bg"></div>
 </section>
