--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -32,6 +32,13 @@ body
     width: 100%
     margin: 0 auto
     padding: 0 11.5rem
+    @media only screen and (max-width : 834px)
+        max-width: 83.4rem
+        padding: 0 7.2rem
+    @media only screen and (max-width : 375px)
+        max-width: 37.5rem
+        padding: 0 3rem
+        
 
 a 
     text-decoration: none
