--- a/app/sass/_typography.sass
+++ b/app/sass/_typography.sass
@@ -1,33 +1,49 @@
 .title-1
-    font-family: 'Work Sans', sans-serif
     font-size: 6.7rem
-    font-weight: 700
+    font-weight: 600
     line-height: 1.1
-
+    @media only screen and (max-width : 834px)
+        font-size: 3.8rem
+        line-height: 1.2
+        
 .title-2
     font-size: 3.8rem
     font-weight: 600
     line-height: 1.2
+    @media only screen and (max-width : 834px)
+        font-size: 2.8rem
+        line-height: 1.4
 
 .title-3
     font-size: 2.2rem
     font-weight: 600
     line-height: 1.4
+    @media only screen and (max-width : 834px)
+        font-size: 1.6rem
 
 .title-5
     font-size: 2.2rem
     font-weight: 700
     line-height: 1.6
+    @media only screen and (max-width : 834px)
+        font-size: 1.6rem
+        font-weight: 600
+
 
 .base-text
     font-size: 1.6rem
     font-weight: 400
     line-height: 1.4
+    @media only screen and (max-width : 834px)
+        font-size: 1.2rem 
 
 .subtitle
     font-size: 2.2rem
     font-weight: 400
     line-height: 1.6
+    @media only screen and (max-width : 834px)
+        font-size: 1.6rem
+        line-height: 1.4
 
 .btn
     background-color: $color-call-to-action
@@ -49,4 +65,7 @@
         height: 3.2rem
         fill: $color-call-to-action
         margin-right: 1.2rem
+        @media only screen and (max-width : 834px)
+            width: 2.4rem
+            height: 2.4rem
 
