--- a/app/sass/_works.sass
+++ b/app/sass/_works.sass
@@ -1,8 +1,12 @@
 .works
     margin-bottom: 12rem
+    @media only screen and (max-width : 834px)
+        margin-bottom: 8rem
     
 .works-titles
     margin-bottom: 4.8rem
+    @media only screen and (max-width : 834px)
+        margin-bottom: 4rem
 
 .works-title
     margin-bottom: 1rem
@@ -22,5 +26,15 @@
         width: 25rem
         height: 25rem
         margin-bottom: 2rem
+        @media only screen and (max-width : 834px)
+            width: 16rem
+            height: 16rem
     &__title
         margin-bottom: 1rem
+    p
+        @media only screen and (max-width : 834px)
+            width: 18rem
+    @media only screen and (max-width : 834px)
+        max-width: 21rem
+        height: 32rem
+        padding: 1rem 1.5rem 3rem 1.5rem
