--- a/app/components/creators.html
+++ b/app/components/creators.html
@@ -17,43 +17,51 @@
                     <p>1</p>
                 </div>
                 <img src="../images/Avatar Placeholder.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">Keepitreal</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>2</p>
                 </div>
                 <img src="../images/Avatar Placeholder-1.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">DigiLab</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>3</p>
                 </div>
                 <img src="../images/Avatar Placeholder-2.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">GravityOne</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>4</p>
                 </div>
                 <img src="../images/Avatar Placeholder-3.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">Juanie</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
+                </div>
                 </div>
             </div>
             <div class="creators-card">
@@ -61,88 +69,104 @@
                     <p>5</p>
                 </div>
                 <img src="../images/Avatar Placeholder-4.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">BlueWhale</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>6</p>
                 </div>
                 <img src="../images/Avatar Placeholder-5.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">mr fox</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>7</p>
                 </div>
                 <img src="../images/Avatar Placeholder-6.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">Shroomie</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>8</p>
                 </div>
                 <img src="../images/Avatar Placeholder-7.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">robotica</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>9</p>
                 </div>
                 <img src="../images/Avatar Placeholder-19.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">RustyRobot</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>10</p>
                 </div>
                 <img src="../images/Avatar Placeholder-12.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">animakid</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>11</p>
                 </div>
                 <img src="../images/Avatar Placeholder-13.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">Dotgu</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
             </div>
+            </div>
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>12</p>
                 </div>
                 <img src="../images/Avatar Placeholder-15.webp" alt="">
+                <div class="wrapper-inner">
                 <h3 class="creators-card__title title-3">Ghiblier</h3>
                 <div class="creators-card__total-wrapper">
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
+            </div>
             </div>
         </div>
     </div>
