--- a/app/components/hero.html
+++ b/app/components/hero.html
@@ -7,13 +7,13 @@
           NFT marketplace UI created with Anima for Figma. Collect, buy and sell
           art from more than 20k NFT artists.
         </p>
+        <div class="additional-info-wrapper">
         <a href="#" class="hero-btn btn base-text">
           <svg>
             <use xlink:href="../images/symbol-defs.svg#icon-RocketLaunch"></use>
           </svg>
           Get Started
         </a>
-        <div class="additional-info-wrapper">
           <div class="additional-info">
             <p class="quantity">240k+</p>
             <p class="quantity-content">Total Sale</p>
@@ -29,14 +29,14 @@
         </div>
       </div>
       <div class="artist-card">
-        <img src="../images/hero-img.webp" alt="" />
+        <img src="../images/hero-img.webp" alt="" class="artist-card__img" />
         <div class="artist-card__wrapper-bottom">
-          <h5 class="artist-card__title subtitle">Space Walking</h5>
+          <h5 class="artist-card__title title-3">Space Walking</h5>
           <div class="artist-card__wrapper">
             <img
               src="../images/Avatar Placeholder-12.png"
               alt=""
-              class="artist-card__img"
+              class="artist-card__icon"
             />
             <p class="artist-card__name base-text">Animakid</p>
           </div>
