--- a/app/sass/_discover.sass
+++ b/app/sass/_discover.sass
@@ -17,10 +17,14 @@
             width: 2rem
             height: 2rem
             margin-right: 1.2rem
+        @media only screen and (max-width : 834px)
+            grid-column: 2 / 3
     &__pustoi
         grid-row: 2 / 3
         grid-column: 1 / -1
         width: 100%
+        @media only screen and (max-width : 834px)
+            display: none
 
 .discover-wrapper
     display: grid
@@ -28,9 +32,13 @@
     grid-template-rows: min-content min-content auto
     gap: 3rem
     margin-bottom: 8rem
+    @media only screen and (max-width : 834px)
+        grid-template-columns: repeat(2, 1fr)
 
 .discover-titles
     grid-column: 1 / 3
+    @media only screen and (max-width : 834px)
+        grid-column: 1 / 2
 
 .discover-card
     max-width: 33rem
@@ -65,6 +73,19 @@
         display: flex
         flex-direction: column
         align-items: end
+    @media only screen and (max-width : 834px)
+        &:last-child
+            display: none
+
+.discover-bg
+    height: 106rem
+    width: 100%
+    background: url(/images/NFT-highlight.webp) center/cover no-repeat
+    @media only screen and (max-width : 834px)
+        height: 63rem
+        background: url(/images/NFT-Tablet.webp), url(linear-gradient(180deg, rgba(162, 89, 255, 0.00) 0%, #A259FF 100%))
+        max-width: 83.4rem
+        background-size: auto
 
             
 
