--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -1,16 +1,25 @@
 .footer
     background-color: $color-background-secondary
     width: 100%
-    height: 33.5rem
+    height: 30.5rem
+    @media only screen and (max-width : 834px)
+        height: 65rem
 
 .footer-wrapper
     display: flex
     padding: 4rem 3rem
+    @media only screen and (max-width : 834px)
+        display: block
+        padding: 0
+        padding-top: 4rem 
 
 .footer-logo-box
     margin-right: 8.4rem
+    width: 43rem
     &__logo
         margin-bottom: 3rem
+        @media only screen and (max-width : 834px)
+            margin-bottom: 2rem
     p
         color: #CCC
         &:first-of-type
@@ -24,6 +33,8 @@
         margin-right: 1rem
         &:last-child
             margin-right: 0
+    @media only screen and (max-width : 834px)
+        margin-bottom: 3rem
             
                 
 
@@ -33,21 +44,29 @@
     &__title
         margin-bottom: 2.5rem
         font-family: "Space Mono"
+        @media only screen and (max-width : 834px)
+            margin-bottom: 2rem
     &__item
         margin-bottom: 2rem
         &:last-child
             margin-bottom: 0
     &__link
         color: #CCC
+    @media only screen and (max-width : 834px)
+        margin-bottom: 3rem
 
 .footer-mail
     &__title
         margin-bottom: 2.5rem
         font-family: "Space Mono"
+        @media only screen and (max-width : 834px)
+            margin-bottom: 2rem
     p
         color: #CCC
         margin-bottom: 2rem
         width: 33rem
+        @media only screen and (max-width : 834px)
+            width: 69rem
     form
         position: relative
         border-radius: 2rem
@@ -62,6 +81,8 @@
             &::placeholder
                 color: $color-background
                 padding-left: 2rem
+                @media only screen and (max-width : 834px)
+                    font-size: 1.6rem
         button
             position: absolute
             right: 0
@@ -75,6 +96,8 @@
             width: 18rem
             font-weight: 600
             cursor: pointer
+            @media only screen and (max-width : 834px)
+                font-size: 1.6rem
 
 .footer-line
     display: block
@@ -82,6 +105,8 @@
     border: none
     border-top: .1rem solid $color-caption-label-text
     margin-bottom: 2rem
+    @media only screen and (max-width : 834px)
+        margin-top: 5rem
 
 .footer-rights
     font-size: 1.2rem
@@ -89,3 +114,5 @@
     line-height: 1.1
     color: #CCC
     margin-bottom: 4rem
+    @media only screen and (max-width : 834px)
+        margin-bottom: 0
