--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -3,16 +3,24 @@
 	padding: 0 5rem
 	margin: 0 auto
 	height: 10rem
+	@media only screen and (max-width : 834px)
+		height: 5.4rem
+	@media only screen and (max-width : 375px)
+		padding: 0 3rem
 
 .nav
 	display: flex
 	justify-content: space-between
 	align-items: center
 	padding: 2rem 0
+	@media only screen and (max-width : 834px)
+		padding: 1.5rem 0
 	&__items
 		display: flex
 		align-items: center
 		gap: 1rem
+		@media only screen and (max-width : 834px)
+			display: none
 	&__item
 		padding: 1.2rem 2rem
 		svg
@@ -24,8 +32,48 @@
 			display: flex
 			align-items: center
 			
+.header-burger
+	display: none
+	@media only screen and (max-width : 834px)
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 2.4rem
+		height: 2.4rem
+		position: relative
+		span
+			width: 1.8rem
+			height: .2rem
+			background-color: $color-text
+			transform: scale(1)
+		&::before, &::after
+			content: ""
+			width: 1.3rem
+			height: .2rem
+			position: absolute
+			background-color: $color-text
+			transition: .3s all
+		&::before
+			top: .3rem
+		&::after
+			bottom: .3rem
+		&.active
+			&::after
+				transform: rotate(45deg) translate(0, 50%) 
+				bottom: 50%
+			&::before
+				transform: rotate(-45deg) translate(0, -50%) 
+				top: 50%
+			span
+				transform: scale(0)
+				
+.open
+	@media only screen and (max-width : 834px)
+		display: flex		
+				
 
 
 
+					
 
             
