--- a/app/sass/_subscribe.sass
+++ b/app/sass/_subscribe.sass
@@ -11,6 +11,12 @@
         max-width: 42.5rem
         height: 31rem
         margin-right: 8rem
+        @media only screen and (max-width : 834px)
+            max-width: 30rem
+            height: 28rem
+            margin-right: 3rem
+    @media only screen and (max-width : 834px)
+        padding: 4rem 3rem
 
 .subscribe-mail-wrapper
     &__title
@@ -31,6 +37,16 @@
             &::placeholder
                 color: $color-background
                 padding-left: 2rem
+                @media only screen and (max-width : 834px)
+                    padding: 1.6rem 2rem
+                    background-color: #fff
+                    color: $color-background
+                    font-size: 1.6rem
+                    font-weight: 400
+                    line-height: 1.4
+            @media only screen and (max-width : 834px)
+                height: 4.6rem
+                margin-bottom: 1.6rem
         button
             position: absolute
             right: 0
@@ -45,7 +61,19 @@
             font-weight: 600
             display: flex
             cursor: pointer
+            @media only screen and (max-width : 834px)
+                position: static
+                width: 30rem
+                height: 4.6rem
+                align-items: center
+                justify-content: center
+                font-size: 1.6rem
             svg
                 width: 2rem
                 height: 2rem
                 margin-right: 1.2rem
+        @media only screen and (max-width : 834px)
+            position: static
+            display: block
+            max-width: 30rem
+            height: 4.6rem
