доделал планшетную и мобильную вёрстку

--- a/app/components/creators.html
+++ b/app/components/creators.html
@@ -12,6 +12,7 @@
             View Rankings
           </a>
           <div class="creators__pustoi"></div>
+          <div class="box-card">
             <div class="creators-card">
                 <div class="creators-card__number base-text">
                     <p>1</p>
@@ -166,6 +167,7 @@
                     <p class="creators-card__sales base-text">Total Sales:</p>
                     <p class="creators-card__price base-text">34.53 ETH</p>
                 </div>
+            </div>
             </div>
             </div>
         </div>
