--- a/app/components/discover.html
+++ b/app/components/discover.html
@@ -12,6 +12,7 @@
         See All
       </a>
       <div class="discover__pustoi"></div>
+      <div class="discover-box">
       <div class="discover-card">
         <img src="../images/NFT-image-1.webp" alt="" />
         <div class="discover-card__artist-wrapper">
@@ -72,6 +73,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
   <div class="discover-bg"></div>
