--- a/app/sass/_categories.sass
+++ b/app/sass/_categories.sass
@@ -12,6 +12,9 @@
     display: grid
     grid-template-columns: repeat(4, 1fr)
     gap: 3rem
+    @media only screen and (max-width : 375px)
+        grid-template-columns: repeat(2, 1fr)
+        gap: 2rem
 
 .categories-card 
     position: relative 
