--- a/app/sass/_hero.sass
+++ b/app/sass/_hero.sass
@@ -6,12 +6,13 @@
         gap: 3rem
         @media only screen and (max-width : 375px)
             grid-template-columns: auto 0
-            grid-template-rows: repeat(3, 1fr)
+            grid-template-rows: repeat(2, min-content)
             gap: 0
     &__left-wrapper
         max-width: 50rem
     @media only screen and (max-width : 375px)
-        margin: 4rem 0
+        margin-top: 4rem
+
         
 .hero-title
     margin-bottom: 2rem
