--- a/app/components/works.html
+++ b/app/components/works.html
@@ -7,29 +7,35 @@
     <div class="works-wrapper">
       <div class="works-card">
         <img src="../images/works-1.webp" alt="" />
+        <div class="works-card-wrapper">
         <h5 class="works-card__title title-3">Setup Your wallet</h5>
         <p class="text base-text">
           Set up your wallet of choice. Connect it to the Animarket by clicking
           the wallet icon in the top right corner.
         </p>
       </div>
+      </div>
 
       <div class="works-card">
         <img src="../images/works-2.webp" alt="" />
+        <div class="works-card-wrapper">
         <h5 class="works-card__title title-3">Create Collection</h5>
         <p class="text base-text">
           Upload your work and setup your collection. Add a description, social
           links and floor price.
         </p>
       </div>
+      </div>
 
       <div class="works-card">
         <img src="../images/works-3.webp" alt="" />
+        <div class="works-card-wrapper">
         <h5 class="works-card__title title-3">Start Earning</h5>
         <p class="text base-text">
           Choose between auctions and fixed-price listings. Start earning by
           selling your NFTs or trading others.
         </p>
+      </div>
       </div>
     </div>
   </div>
