--- a/app/sass/_collection.sass
+++ b/app/sass/_collection.sass
@@ -19,6 +19,9 @@
     @media only screen and (max-width : 834px)
         &:last-of-type
             display: none
+    @media only screen and (max-width : 375px)
+        &:nth-child(2)
+            display: none
     &__primary-photo
         margin-bottom: 1.5rem           
     &__img-wrapper
