--- a/app/sass/_creators.sass
+++ b/app/sass/_creators.sass
@@ -21,6 +21,10 @@
         align-self: flex-end
         @media only screen and (max-width : 834px)
             grid-column: 2 / 3
+        @media only screen and (max-width : 375px)
+            grid-column: 1 / 2
+            grid-row: 3 / 4
+            width: 100%
         svg
             stroke: $color-call-to-action
             width: 2rem
@@ -33,6 +37,8 @@
         width: 100%
         @media only screen and (max-width : 834px)
             height: .1rem
+        @media only screen and (max-width : 375px)
+            display: none
 
 .creators-wrapper
     display: grid
@@ -41,6 +47,10 @@
     gap: 2rem
     @media only screen and (max-width : 834px)
         grid-template-columns: 1fr 1fr
+    @media only screen and (max-width : 375px)
+        grid-template-columns: auto 0
+        grid-template-rows: min-content auto min-content
+        gap: 4rem
 
 .wrapper-inner
     padding: 2rem
@@ -59,6 +69,11 @@
         flex-direction: row
         max-width: 33rem
         height: 10rem
+    @media only screen and (max-width : 375px)
+        grid-row: 2 / 3
+        margin-bottom: 2rem
+        &:last-child
+            margin-bottom: 0
     img
         margin-bottom: 2rem
         width: 12rem
@@ -100,4 +115,11 @@
         @media only screen and (max-width : 834px)
             width: 10rem
 
+        
+.box-card
+    grid-column: 1 / -1
+    @media only screen and (max-width : 375px)
+        grid-column: 1 / 2
+        grid-row: 2 / 3
+        display: block
         
