--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -4,6 +4,8 @@
     height: 30.5rem
     @media only screen and (max-width : 834px)
         height: 65rem
+    @media only screen and (max-width : 375px)
+        height: 74rem
 
 .footer-wrapper
     display: flex
@@ -26,6 +28,8 @@
             margin-bottom: 2rem
         &:last-of-type
             margin-bottom: 1.5rem
+        @media only screen and (max-width : 375px)
+            width: 25rem
     &__img
         width: 3.2rem
         height: 3.2rem
@@ -35,9 +39,7 @@
             margin-right: 0
     @media only screen and (max-width : 834px)
         margin-bottom: 3rem
-            
-                
-
+    
 .footer-nav
     width: 20.5rem
     margin-right: 10.7rem
@@ -67,11 +69,14 @@
         width: 33rem
         @media only screen and (max-width : 834px)
             width: 69rem
+        @media only screen and (max-width : 375px)
+            width: 25rem
     form
         position: relative
         border-radius: 2rem
         width: 42rem
         height: 6rem
+        margin-bottom: 5rem
         input
             width: 100%
             height: 6rem
@@ -82,7 +87,15 @@
                 color: $color-background
                 padding-left: 2rem
                 @media only screen and (max-width : 834px)
+                    padding: 1.6rem 2rem
+                    background-color: #fff
+                    color: $color-background
                     font-size: 1.6rem
+                    font-weight: 400
+                    line-height: 1.4
+            @media only screen and (max-width : 834px)
+                height: 4.6rem
+                margin-bottom: 1.6rem
         button
             position: absolute
             right: 0
@@ -93,11 +106,28 @@
             border-radius: 2rem
             color: $color-text
             height: 6rem
-            width: 18rem
+            width: 21rem
             font-weight: 600
+            display: flex
             cursor: pointer
             @media only screen and (max-width : 834px)
+                position: static
+                width: 30rem
+                height: 4.6rem
+                align-items: center
+                justify-content: center
                 font-size: 1.6rem
+            svg
+                width: 2rem
+                height: 2rem
+                margin-right: 1.2rem
+        @media only screen and (max-width : 834px)
+            position: static
+            display: block
+            max-width: 30rem
+            height: 4.6rem
+        @media only screen and (max-width : 375px)
+            margin-bottom: 10rem
 
 .footer-line
     display: block
