--- a/app/sass/_subscribe.sass
+++ b/app/sass/_subscribe.sass
@@ -1,6 +1,9 @@
 .subscribe
     margin-bottom: 8rem
     height: 43rem
+    @media only screen and (max-width : 375px)
+        height: 100%
+        margin-bottom: 10rem
 
 .subscribe-wrapper
     background-color: $color-background-secondary
@@ -15,8 +18,19 @@
             max-width: 30rem
             height: 28rem
             margin-right: 3rem
+        @media only screen and (max-width : 375px)
+            max-width: 31.5rem
+            height: 25.5rem
+            margin-right: 0
+            border-radius: 2rem
+            background-color: $color-background
+            margin-bottom: 3rem
     @media only screen and (max-width : 834px)
         padding: 4rem 3rem
+    @media only screen and (max-width : 375px)
+        display: block
+        padding: 0
+        background-color: $color-background
 
 .subscribe-mail-wrapper
     &__title
