--- a/app/sass/_works.sass
+++ b/app/sass/_works.sass
@@ -14,6 +14,8 @@
 .works-wrapper
     display: flex
     gap: 3rem
+    @media only screen and (max-width : 375px)
+        display: block
 
 .works-card
     padding: 1rem 3rem
@@ -29,6 +31,9 @@
         @media only screen and (max-width : 834px)
             width: 16rem
             height: 16rem
+        @media only screen and (max-width : 375px)
+            width: 10rem
+            height: 10rem
     &__title
         margin-bottom: 1rem
     p
@@ -38,3 +43,12 @@
         max-width: 21rem
         height: 32rem
         padding: 1rem 1.5rem 3rem 1.5rem
+    @media only screen and (max-width : 375px)
+        max-width: 100%
+        height: 15.7rem
+        display: flex
+        padding: 2rem
+        margin-bottom: 2rem
+        &:last-child
+            margin-bottom: 0
+
